--- a/favorite.html
+++ b/favorite.html
@@ -1,128 +1,118 @@
 <!DOCTYPE html>
 <html>
+
 <head lang='en'>
 
-	<title>Main Page - Welcome</title>
+    <title>Main Page - Welcome</title>
 
 
-	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 
-<link rel="stylesheet" href="assets/css/font-awesome.css">
-
-
-<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-
-<!-- To ensure proper rendering and touch zooming -->
-<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-<script src="http://code.responsivevoice.org/responsivevoice.js"></script>
+    <link rel="stylesheet" href="assets/css/font-awesome.css">
 
 
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- To ensure proper rendering and touch zooming -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+    <script src="http://code.responsivevoice.org/responsivevoice.js"></script>
 
 
-	<!-- To ensure proper rendering and touch zooming -->
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 
-	<script src="http://code.responsivevoice.org/responsivevoice.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-	<!-- LINK TO FIREBASE GOES HERE -->
-  	<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
-	<style>
-		.glyphstyle{
-			font-size: 20px;
-		}
 
-	</style>
+    <!-- To ensure proper rendering and touch zooming -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+
+    <script src="http://code.responsivevoice.org/responsivevoice.js"></script>
+
+    <!-- LINK TO FIREBASE GOES HERE -->
+    <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+
+    <style>
+        .glyphstyle {
+            font-size: 20px;
+        }
+    </style>
 
 </head>
+
 <body>
 
 
 
-	<nav class="navbar navbar-inverse nav-style navbar-fixed-top">
-	 	<div class="container-fluid">
-	   		<div class="navbar-header">
-	     		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+    <nav class="navbar navbar-inverse nav-style navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
 	       		<span class="icon-bar"></span>
 	       		<span class="icon-bar"></span>
 	       		<span class="icon-bar"></span>                        
 	      		</button>
-	      		<a class="navbar-brand" href="main_2.html">Word Up</a>
-	    	</div>
-	    	<div class="collapse navbar-collapse navbar-right" id="myNavbar">
-	      		<ul class="nav navbar-nav">
-	       			<li><a href="main_2.html"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>&nbsp;Search</a></li>
-	        		<li class="active"><a href="favorite.html"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>&nbsp;  Favorites</a></li>
-	        		<li><a href="challenge.html"><i class="fa fa-trophy" aria-hidden="true"></i>&nbsp; Challenge</a>		</li>
-	      		</ul>
-	   		 </div>
-	  	</div>
-	</nav>
+                <a class="navbar-brand" href="main_2.html">Word Up</a>
+            </div>
+            <div class="collapse navbar-collapse navbar-right" id="myNavbar">
+                <ul class="nav navbar-nav">
+                    <li><a href="main_2.html"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>&nbsp;Search</a></li>
+                    <li class="active"><a href="favorite.html"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>&nbsp;  Favorites</a></li>
+                    <li><a href="challenge.html"><i class="fa fa-trophy" aria-hidden="true"></i>&nbsp; Challenge</a> </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
 
 
-	<div class="container">
+    <div class="container">
 
-		<div class="row">
-			<div class="col-md-3"></div>
-			<div class="col-md-6">
-				<h1><span class="glyphicon glyphicon-star" aria-hidden="true"></span>&nbsp; Favorite Words</h1>
+        <div class="row">
+            <div class="col-md-5"></div>
+            <div class="col-md-4">
+                <h1><span class="glyphicon glyphicon-star" aria-hidden="true"></span>&nbsp; Favorite Words</h1>
 
-			</div>
-			<div class="col-md-3"></div>
-		</div>
+            </div>
+            <div class="col-md-3"></div>
+        </div>
 
-		<div class="row">
-			<div class="col-md-3"></div>
+        <div class="row">
+            <div class="col-md-5"></div>
 
-			<div class="col-md-6">
+            <div class="col-md-4">
 
 
-				<div id="word-dumpster">
+                <div id="word-dumpster">
 
-					<!-- here the word and its type will be properly formatted
+                    <!-- here the word and its type will be properly formatted
 					and displayed -->
-					<div id="words">
-						<ul id="list">
-						</ul>
-					</div>
+                    <div id="words">
+                        <ul id="list">
+                        </ul>
+                    </div>
 
-					<div id="word-definition">
-					</div>
-				</div>
+                    <div id="word-definition">
+                    </div>
+                </div>
 
-			<div class="col-md-3"></div>
+                <div class="col-md-3"></div>
 
-			</div>
-		</div>
-
-
-	</div>
+            </div>
+        </div>
 
 
+    </div>
 
-
-
-
-
-
-	<script type="text/javascript" src="assets/javascript/favorite-logic.js">
-
-	</script>
+    <script type="text/javascript" src="assets/javascript/favorite-logic.js"></script>
 
 </body>
 
 </html>
-
-
