--- a/main_2.html
+++ b/main_2.html
@@ -1,357 +1,117 @@
 <!DOCTYPE html>
 <html>
+
 <head lang='en'>
 
-	<title>Main Page - Welcome</title>
+    <title>Main Page - Welcome</title>
+
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="assets/css/font-awesome.css">
+
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
+    <!-- To ensure proper rendering and touch zooming -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+
+    <script src="http://code.responsivevoice.org/responsivevoice.js"></script>
+
+    <!-- LINK TO FIREBASE GOES HERE -->
+    <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
 
 
-	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-
-<link rel="stylesheet" href="assets/css/font-awesome.css">
-
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <style>
+        .glyphstyle {
+            font-size: 20px;
+        }
+    </style>
 
 
-	<!-- To ensure proper rendering and touch zooming -->
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-	<script src="http://code.responsivevoice.org/responsivevoice.js"></script>
+    <script src="https://use.fontawesome.com/559c51d706.js"></script>
 
-	 <!-- LINK TO FIREBASE GOES HERE -->
-  	<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
-
-	<style>
-		.glyphstyle{
-			font-size: 20px;
-		}
-
-	</style>
-
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-<script src="https://use.fontawesome.com/559c51d706.js"></script>
-
-<script src="http://code.responsivevoice.org/responsivevoice.js"></script>
-
-
-
+    <script src="http://code.responsivevoice.org/responsivevoice.js"></script>
 
 </head>
 
 <body>
+    <!-- Navigation Bar -->
 
-	<!-- Navigation Bar -->
+    <nav class="navbar navbar-inverse nav-style navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>                        
+				</button>
+                <a class="navbar-brand" href="main_2.html">Word Up</a>
+            </div>
+            <div class="collapse navbar-collapse navbar-right" id="myNavbar">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="main_2.html"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>&nbsp;Search</a></li>
+                    <li><a href="favorite.html"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>&nbsp;  Favorites</a></li>
+                    <li><a href="challenge.html"><i class="fa fa-trophy" aria-hidden="true"></i>&nbsp; Challenge</a> </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-	<nav class="navbar navbar-inverse nav-style navbar-fixed-top">
-	 	<div class="container-fluid">
-	   		<div class="navbar-header">
-	     		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-	       		<span class="icon-bar"></span>
-	       		<span class="icon-bar"></span>
-	       		<span class="icon-bar"></span>                        
-	      		</button>
-	      		<a class="navbar-brand" href="main_2.html">Word Up</a>
-	    	</div>
-	    	<div class="collapse navbar-collapse navbar-right" id="myNavbar">
-	      		<ul class="nav navbar-nav">
-	       			<li class="active"><a href="main_2.html"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>&nbsp;Search</a></li>
-	        		<li><a href="favorite.html"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>&nbsp;  Favorites</a></li>
-	        		<li><a href="challenge.html"><i class="fa fa-trophy" aria-hidden="true"></i>&nbsp; Challenge</a>		</li>
-	      		</ul>
-	   		 </div>
-	  	</div>
+    <div class="container">
 
-	</nav>
+        <div class="row">
 
-	<div class="container">
+            <div class="col-md-5"></div>
 
-		<div class="row">
-			<div class="col-md-3"></div>
-			<div class="col-md-6">
-				<form>
-					<!-- user would enter in word they want to find the definition of -->
-					<input type="text"  id="input" placeholder=" enter a word">
-					<!-- when selected button will display definition of word located in input section --> 
-					<button class="button-style" id="search"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+            <div class="col-md-4">
+                <form>
+                    <!-- user would enter in word they want to find the definition of -->
+                    <input type="text" id="input" placeholder=" enter a word">
+                    <!-- when selected button will display definition of word located in input section -->
+                    <button class="button-style" id="search"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
 
-				<!-- when selected it will take user to a new page that displays list of favorite words -->
-				<button class="button-style" id="button2"><span class="glyphicon glyphicon-star" aria-hidden="true"></button>
+                    <!-- when selected it will take user to a new page that displays list of favorite words -->
+                    <button class="btn btn-default button-style" id="add-to-favorites"><span class="glyphicon glyphicon-star" aria-hidden="true"></button>
+                </form>
+            </div>
 
-					<!-- when selected it will take user to a new page that displays list of favorite words -->
-					<button class="btn btn-default button-style" id="add-to-favorites"><span class="glyphicon glyphicon-star" aria-hidden="true"></button>
+            <div class="col-md-3"></div>
 
-				</form>
+        </div>
 
-			</div>
-			<div class="col-md-3"></div>
-		</div>
+        <div class="row">
 
-		<div class="row">
-			<div class="col-md-3"></div>
+            <div class="col-md-5"></div>
 
-			<div class="col-md-6">
+            <div class="col-md-4">
 
-
-				<div id="word-dumpster">
-
-					<!-- here the word and its type will be properly formatted
+                <div id="word-dumpster">
+                    <!-- here the word and its type will be properly formatted
 					and displayed -->
-					<div id="word-info">
-					</div>
+                    <div id="word-info">
+                    </div>
 
-					<div id="word-definition">
-					</div>
-				</div>
+                    <div id="word-definition">
+                    </div>
+                </div>
 
-			<div class="col-md-3"></div>
+                <div class="col-md-3"></div>
 
-			</div>
-		</div>
+            </div>
+        </div>
 
 
-	</div>
+    </div>
 
+    <script type="text/javascript" src="assets/javascript/main-logic.js"></script>
 
-			<script type="text/javascript">
-<script type="text/javascript">
+    <!-- first, we look into the lexicalEntries array to check whether or not there is more than one entry for the word that was searched... so for instance, the word "front" has three lexicalEntries. One is for "front" as a Noun, the other as an Adjective, and lastly as a Verb... So, here is where the branching of our conditionals needs to start happenning. does the returned word have more than one lexical entry? if there is only one, we go in this direction... if it has more than one, we go in this other direction. -->
 
-		//these are the words for the daily challenge.
-		var wordsList = [];
-
-		//an empty array to hold the favorite words
-		// var favWords = [];
-
-		// =============================================
-
-
-		  // Initialize Firebase
-		  var config = {
-		  	apiKey: "AIzaSyBHzsuJjRTjI63IifVncdfhyav-GYuzVR0",
-		  	authDomain: "team-gosling.firebaseapp.com",
-		  	databaseURL: "https://team-gosling.firebaseio.com",
-		  	projectId: "team-gosling",
-		  	storageBucket: "team-gosling.appspot.com",
-		  	messagingSenderId: "440069700680"
-		  };
-		  firebase.initializeApp(config);
-
-		  var database = firebase.database();
-
-
-		  // =============================================
-
-
-		$('#search').on("click", function(){
-
-			//Prevents button from submitting form
-			event.preventDefault();
-
-			// //declares an empty variable to hold user input
-			// var word = "";
-
-			//catches user input, trims white space on ends, and makes it all lower case
-			var word = ($('#input').val().trim()).toLowerCase();
-
-			//all this does is clear the text form after the search button is activated.
-			//it sets the value of the html element with id #input to an empty string
-			$('#input').val('');
-
-			$('#add-to-favorites').on("click", function(){
-				event.preventDefault();
-
-				//if the word variable is not an empty string, the push it into the favorite words
-				//array. after you do that, clear that value of the word variable
-				if(word !== ''){
-					
-					//if the word isn't an empty string, send it to the database 
-					console.log("sending to database...");
-					database.ref().push({
-					favoriteWordEntry: word
-					});
-					console.log("sent");
-					console.log("=========");
-
-					word = '';
-					// database.ref().on("value", function(snapshot){
-
-					// 	var sv = snapshot.val();
-
-					// 	console.log(sv);
-					// 	console.log(Object.keys(sv));
-
-					// });
-
-				}
-
-
-				
-			});
-
-
-			//URL to be passed to the API for request. Notice how word is dinamically inserted into 
-			//URL
-			var queryURL = 'https://fathomless-plains-61908.herokuapp.com/dictionary/entries/en/' + "" + word + "" ;
-
-			
-
-			//This is where our AJAX call begins
-			$.ajax({
-				url: queryURL,
-				method: "GET"
-
-			}).done(function(response){
-
-				console.log(response);
-
-				console.log("Will use this to check whether there are examples sentences available or not: ");
-				console.log(Object.keys(response.results[0].lexicalEntries[0].entries[0].senses[0]));
-
-				// console.log("# OF LEXICAL ENTRIES: " + (response.results[0].lexicalEntries).length + "... meaning, there's more than one word type.");
-
-				// console.log("lexicalEntries[i] > entries[i] > senses[i]: "+(response.results[0].lexicalEntries[0].entries[0].senses).length + "... meaning we have 5 available definitions");
-
-
-				//this conditional structure helps us determine whether the word is available
-				//in more than one type... that is, adjective, noun, or verb.
-				//if the words is only available in one form, we do one thing. but if it is
-				//available in more than one type, we do something else...
-
-				if ((response.results[0].lexicalEntries).length > 1){
-
-					//there is more than one lexical entry
-
-					var numOfDefinitions = (response.results[0].lexicalEntries[0].entries[0].senses).length;
-
-					var numOfLexicalEntries = (response.results[0].lexicalEntries).length;
-
-
-					var $title = '<h2>' + word + ' ' + '<span class="glyphicon glyphicon-volume-up glyphstyle" aria-hidden="true" id="speak"></span>' + '</h2>';
-
-					//empties the #word-info container
-					$('#word-info').empty();
-					$('#word-definition').html($title);
-
-					$('#speak').on("click", function(){
-
-
-						responsiveVoice.speak(word, "US English Female");
-
-					});
-
-
-					//this loop, in essence, is used to grab and display information about the word
-					//that was searched, such as wordType, and multiple possible definitions.
-					for (var i = 0; i < numOfLexicalEntries; i++) {
-
-						var wordType = (response.results[0].lexicalEntries[i].lexicalCategory).toLowerCase();
-
-						var $type = '<h4>' + wordType + '</h4>';
-
-						$('#word-definition').append($type);
-
-						for (var ii = 0; ii < numOfDefinitions; ii++) {
-
-
-							var $definition = '<strong>' + (ii+1) + '</strong>' + " " + response.results[0].lexicalEntries[0].entries[0].senses[ii].definitions[0];
-
-							$('#word-definition').append($definition);
-
-							//here we're storing the contents of the senses array to check whether or not there is an 'examples' key
-							var senses = Object.keys(response.results[0].lexicalEntries[0].entries[0].senses[ii]);
-
-							//if there are examples sentences... display them
-							if(senses.indexOf("examples")){
-								// console.log("there are example sentences");
-								var exampleSentence = response.results[0].lexicalEntries[0].entries[0].senses[ii].examples[0].text;
-
-								$('#word-definition').append(": " + "<i>"+ exampleSentence + "</i>" + "." + "<br />" + "<br />");
-							}
-							else{
-								//nothing
-							}
-
-
-						};
-
-
-					};
-
-				}else{
-
-					//there is only one lexical entry
-
-					var definition = response.results[0].lexicalEntries[0].entries[0].senses[0].definitions[0];
-
-					var wordType = (response.results[0].lexicalEntries[0].lexicalCategory).toLowerCase();
-
-                    var examples = response.results[0].lexicalEntries[0].entries[0].senses[0].examples;
-
-					var exampleSentence = '';
-					if ( examples ) {
- 					  exampleSentence = ": " + "<i>"+ examples[0].text + "</i>" + ".";
-					}
-
-					//this looks horrible to the eye.
-					var $wordInfo = '<h2>' + word + ' ' + '<span class="glyphicon glyphicon-volume-up glyphstyle" aria-hidden="true" id="speak"></span>' + "</h2>" +
-					'<h4>' + wordType + '</h4>';
-
-
-					//when we placed the click event here, it didn't work. WHYYYYY
-
-
-					$('#word-info').empty();
-					$('#word-info').html($wordInfo);
-					$('#word-definition').html(definition);
-					$('#word-definition').append(exampleSentence);
-
-					$('#speak').on("click", function(){
-
-						console.log("inside click event");
-						responsiveVoice.speak(word,  "US English Female");
-
-					});
-				};
-
-			});
-
-
-		});
-
-
-
-	</script>
-	</script>
-
-<!-- first, we look into the lexicalEntries array to check whether or not there is more than one entry for the word that was searched... so for instance, the word "front" has three lexicalEntries. One is for "front" as a Noun, the other as an Adjective, and lastly as a Verb... So, here is where the branching of our conditionals needs to start happenning. does the returned word have more than one lexical entry? if there is only one, we go in this direction... if it has more than one, we go in this other direction.
->>>>>>> 8a061fada4fc920b2e8b8ae2c29b241c0f1fecff
-
-					$('#word-info').empty();
-					$('#word-info').html($wordInfo);
-					$('#word-definition').html(definition);
-					$('#word-definition').append(": " + "<i>"+ exampleSentence + "</i>" + ".");
-
-					$('#speak').on("click", function(){
-
-						console.log("inside click event");
-						responsiveVoice.speak(word,  "US English Female");
-
-					});
-				};
-
-			});
-
-
-		});
-
-
-
-	</script>
 </body>
-
 
 </html>
